src/objects/Influence_Tracker__c.object
<CustomObject>
    <fields>
        <fullName>Error__c</fullName>
        <label>Error</label>
        <picklist>
            <picklistValues>
                <fullName>Failed Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No Contact Record</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Influence Record</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Influence_Snapshot__c</fullName>
        <label>Influence Snapshot</label>
        <referenceTo>Influence_Parent__c</referenceTo>
        <relationshipLabel>Influence Trackers</relationshipLabel>
        <relationshipName>Influence_Trackers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Influence__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Influence</label>
        <referenceTo>Influence__c</referenceTo>
        <relationshipLabel>Influence Trackers</relationshipLabel>
        <relationshipName>Influence_Trackers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Success__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Success</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Influence_Trackers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Influence Tracker</label>
    <nameField>
        <displayFormat>IT-{0000}</displayFormat>
        <label>Influence Tracker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Influence Trackers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>